fix popup id and center no shift disply message

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -6059,11 +6059,6 @@ footer {
     text-align: left;
   }
 
-  .lg\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
-  }
-
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
